--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,135 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.App {
+  @apply max-w-full pb-36 overflow-hidden
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.fav-bag-btn {
+  @apply w-28 h-11 border-2 border-black font-medium text-black rounded-sm hover:bg-slate-300 hover:text-black hover:border-black transition duration-200 dark:text-white dark:border-white dark:hover:bg-white dark:hover:text-black
+}
+
+.size-btn {
+  @apply w-12 h-9 hover:bg-slate-500 hover:text-white rounded-sm border-black border text-center pt-1 cursor-pointer transition duration-200 dark:border-white dark:hover:bg-white dark:hover:text-black
+}
+
+.size-btn.active {
+  @apply bg-black text-white dark:bg-white dark:text-black
+}
+
+.gradient-bg-btn {
+  @apply w-12 h-9 bg-gradient-to-r rounded-sm border-black border cursor-pointer dark:border-white relative transition opacity-60
+}
+
+.gradient-bg-btn.active {
+  @apply before:w-full before:h-full before:absolute before:border-2 before:border-black dark:before:border-white before:transition opacity-100
+}
+
+.bg-color {
+  @apply w-full h-full hidden lg:block fixed before:w-1/2 before:h-full before:bg-slate-100 before:absolute before:-z-10 after:w-1/2 after:h-full after:bg-white after:absolute after:-z-10 after:right-0 after:top-0 dark:before:bg-slate-800 dark:after:bg-slate-900 before:transition before:duration-200 after:transition after:duration-200
+}
+
+.pagination {
+  @apply flex gap-4 absolute bottom-5 md:bottom-0 lg:-bottom-10 left-1/2 -translate-x-1/2 lg:translate-x-0 transition-all duration-300
+}
+
+.pagination > span {
+  @apply w-2.5 h-2.5 bg-white border-2 border-black hover:bg-black transition rounded-full cursor-pointer dark:border-white dark:bg-transparent dark:hover:bg-white duration-300
+}
+
+.pagination > span.active {
+  @apply bg-black dark:bg-white
+} 
+
+.arrow {
+  @apply w-10 cursor-pointer bg-slate-200 text-black hover:bg-slate-500 hover:text-white rounded-full p-1.5 dark:bg-slate-700 dark:text-slate-400 dark:hover:bg-slate-600 dark:hover:text-slate-300 z-0 transition
+}
+
+.product-img {
+  @apply w-full lg:w-635 absolute top-20 right-0 opacity-0 transition-all select-none
+}
+
+.product-img.active {
+  @apply opacity-100
+}
+
+.nav-icon {
+  @apply cursor-pointer w-6 transition
+}
+
+.menu-icon {
+  @apply w-6 h-5 flex flex-col justify-between pt-0.5 mt-0.5 cursor-pointer z-50
+}
+
+.menu-icon.active {
+  @apply fixed right-5 md:right-10 lg:right-16
+}
+
+.menu-icon.active > span {
+  @apply absolute top-1/2 w-full first:-rotate-45 last:rotate-45 even:opacity-0 
+}
+
+.menu-icon > span {
+  @apply w-11/12 h-0.5 bg-black dark:bg-white first:rotate-0 last:rotate-0
+}
+
+.stop-clicking {
+  @apply bg-slate-100 text-slate-400 pointer-events-none dark:bg-slate-800 dark:text-slate-500
+}
+
+ul > li {
+  @apply cursor-pointer
+}
+
+.menu {
+  @apply sm:w-3/4 md:w-96 h-100vh bg-slate-200 dark:bg-slate-900 dark:text-white fixed top-0 -right-full md:-right-1/2 z-40 transition-all duration-300
+}
+
+.menu.active {
+  @apply right-0 shadow-xl shadow-slate-400 dark:shadow-slate-800 transition-all duration-300 z-40
+}
+
+.menu ul {
+  @apply flex flex-col text-xl gap-10 text-right mt-16
+}
+
+.menu ul li {
+  @apply px-16 hover:-translate-x-5 transition duration-200
+}
+
+.blur {
+  @apply backdrop-blur-md dark:backdrop-blur-md z-20 bg-white dark:bg-black dark:bg-opacity-10 fixed top-0 left-0 bg-opacity-10 w-full h-full transition duration-200
+}
+
+.product.active {
+  @apply z-40
+}
+
+.product.active > .arrows {
+  @apply top-0 opacity-0 pointer-events-none
+}
+
+.product.active .product-img {
+  @apply  lg:right-1/2 lg:top-0 lg:scale-150 scale-110 -top-24 md:top-20 z-40
+}
+
+.product.active .pagination {
+  @apply lg:left-0 lg:-bottom-7 lg:-translate-x-1/2
+} 
+
+.product.active .product-container .arrows {
+  @apply opacity-100 pointer-events-auto z-50
+}
+
+.favorite.active {
+  @apply bg-red-500 border-red-500 text-white dark:border-red-500 hover:bg-red-700 hover:border-red-700 dark:hover:bg-red-700 dark:hover:border-red-700 dark:hover:text-white
+}
+
+.search-section {
+  @apply bg-slate-300 dark:bg-slate-700 rounded-sm w-10/12 lg:w-1/3 h-16 absolute -bottom-full left-1/2 -translate-x-1/2 z-50 opacity-0 flex pr-4 pointer-events-none transition duration-300
+}
+
+.search-section.active {
+  @apply opacity-100 pointer-events-auto
 }
